Basic operations are ready, more complex operations and bug fixes needed

--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Calculator</title>
     <link rel="stylesheet" href="style.css">
-    <script src="script.js"></script>
+    <script src="script.js" defer></script>
 </head>
 <body>
     <div class="calculator-container">
         <div class="output-screen">
-            <div class="previous">123</div>
-            <div class="current">123</div>
+            <div class="previous"></div>
+            <div class="current"></div>
         </div>
         <button class="span-2 clear-all">AC</button>
         <button class="del">DEL</button>
